k8s-yamls-master/k8s-yamls-master/live/prod/namespaces/argocd-prod/1-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-prod
  labels:
    istio-injection: disabled
    namespace: argocd-prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pss-enforce: "true"
# ---
# #total namespace quota
# apiVersion: v1
# kind: ResourceQuota
# metadata:
  # name: cpu-mem-limit
  # namespace: argocd-prod
# spec:
  # hard:
    # limits.cpu: 20000m
    # limits.memory: 8G
    # requests.cpu: 2000m
    # requests.memory: 7G
# ---
# #individual container defaults
# apiVersion: v1
# kind: LimitRange
# metadata:
  # name: cpu-mem-limit
  # namespace: argocd-prod
# spec:
  # limits:
  # - default:
      # cpu: 150m
      # memory: 125M
      # ephemeral-storage: 5Gi
    # defaultRequest:
      # cpu: 10m
      # memory: 100M
      # ephemeral-storage: 100Mi
    # max:
      # ephemeral-storage: 10Gi
    # type: Container
# ---
# #default deny network policy
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
  # name: default-deny
  # namespace: argocd-prod
# spec:
  # podSelector: {}
