k8s-yamls-master/k8s-yamls-master/live/prod/namespaces/argocd-prod/2-netpol-prometheus.yaml

---
# Allow istio prometheus to istio sidecars
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus.any.any
  namespace: argocd-prod
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: monitoring
        podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      # ports:
      # - port: 15090
        # protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
